--- a/app/src/main/res/drawable/button_bgxml2.xml
+++ b/app/src/main/res/drawable/button_bgxml2.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@color/purple_700"/>
+    <corners android:radius="100dp"/>
+    <padding android:top="10dp" android:bottom="10dp"/>
 
-</selector>
+</shape>
