--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,19 +16,19 @@
         android:layout_marginTop="150dp"
         android:text="StyleON"
         android:textColor="@color/white"
-        android:textSize="40sp"
+        android:textSize="45sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/createAccountTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="358dp"
+        android:layout_height="43dp"
         android:layout_marginTop="20dp"
         android:text="create account"
         android:textColor="@color/white"
-        android:textSize="19sp"
+        android:textSize="40sp"
         app:layout_constraintStart_toStartOf="@+id/titleTextView"
         app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
 
@@ -135,4 +135,54 @@
         android:textSize="19sp"
         android:textColor="@color/white"/>
 
+    <LinearLayout
+        android:id="@+id/loginwithfb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="50dp"
+        android:layout_marginTop="108dp"
+        android:background="@drawable/button_bgxml2"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
+        tools:ignore="DuplicateIds">
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_baseline_email_24_black"
+            android:text="Log in with facebook"
+            android:textColor="@color/white"
+            android:textSize="23sp" />
+    </LinearLayout>
+
+    <LinearLayout
+
+        android:id="@id/exsistingaccaunt"
+        android:layout_width="243dp"
+        android:layout_height="26dp"
+        android:layout_marginHorizontal="100dp"
+        android:layout_marginTop="24dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+
+
+        app:layout_constraintTop_toBottomOf="@+id/loginwithfb"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="131dp"
+        >
+
+        <TextView
+            android:id="@id/exsistingaccaunt"
+            android:layout_width="243dp"
+            android:layout_height="26dp"
+            android:textSize="17sp"
+            android:text="Already have a accaunt?Log in"
+            android:textColor="@color/white" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
